# u32-matrix-extended

./: README.md
src/api/u32-matrix-api/: .gitignore  Cargo.toml  README.md  logging.prod.yaml  logging.yaml
src/api/u32-matrix-api/matrix-http-client/: Cargo.toml
src/api/u32-matrix-api/matrix-http-client/src/: api_uri_builder.rs  client_config.rs  lib.rs  matrix_client.rs
src/api/u32-matrix-api/matrix-http-client/tests/: matrix_client_test.rs  test.rs
src/api/u32-matrix-api/matrix-web-api/: Cargo.toml
src/api/u32-matrix-api/matrix-web-api/src/: lib.rs  main.rs
src/api/u32-matrix-api/matrix-web-api/src/config/: mod.rs
src/api/u32-matrix-api/matrix-web-api/src/constants/: mod.rs
src/api/u32-matrix-api/matrix-web-api/src/controller/: mod.rs
src/api/u32-matrix-api/matrix-web-api/src/controller/v1/: message_controller.rs  mod.rs  register_controller.rs
src/api/u32-matrix-api/matrix-web-api/src/model/: mod.rs
src/api/u32-matrix-api/matrix-web-api/src/model/v1/: basic_message.rs  mod.rs  user_credential.rs
src/api/u32-matrix-api/matrix-web-api/src/settings/: cli.rs  config.rs  environment.rs  mod.rs
src/api/u32-matrix-api/matrix-web-api/src/web/: app_state.rs
src/api/u32-matrix-api/matrix-web-dto/: Cargo.toml
src/api/u32-matrix-api/matrix-web-dto/src/: lib.rs  register_dto.rs
src/api/u32-matrix-api/matrix-web-entity/src/: lib.rs
src/api/u32-matrix-api/matrix-web-model/: Cargo.toml
src/api/u32-matrix-api/matrix-web-security/: Cargo.toml
src/api/u32-matrix-api/matrix-web-service/: Cargo.toml
(+37 files in other folders)
