[package]
name = "matrix-web-api"
version = "0.1.0"
authors = ["james.meyer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# internal
matrix-http-client = { path = "../matrix-http-client" }
matrix-web-security = { path = "../matrix-web-security" }
matrix-web-dto = { path = "../matrix-web-dto" }
# external
actix-web = { version = "3", features = ["openssl"] }
actix-rt = "1"
actix-files = "0.5.0"
clap = "2"
log = "0.4"
log4rs = "1"
serde = "1"
serde_json = "1"
openssl = "*"
urlencoding = "2.1.0"
uuid = { version = "0.8", features = [ "serde", "v4" ] }